# lss

./: README.md  TODO.md
lss/: CMakeLists.txt  README.md
lss/cf3/: CMakeLists.txt
lss/cf3/lss/: CMakeLists.txt  Dlib.cpp  Dlib.hpp  GMRES.cpp  GMRES.hpp  GaussianElimination.cpp  GaussianElimination.h  GaussianElimination.hpp  LAPACK.cpp  LAPACK.hpp  LibLSS.cpp  LibLSS.hpp  NewtonMethod.cpp  NewtonMethod.hpp  NewtonMethodBounded.cpp  NewtonMethodBounded.hpp  QuasiNewtonMethod.cpp  QuasiNewtonMethod.hpp  dummy_linearsystem.cpp  dummy_linearsystem.h  index.cpp  index.hpp  linearsystem.cpp  linearsystem.h  linearsystem.hpp  lss_index.cpp  lss_index.hpp  lss_linearsystem.hpp  lss_matrix.hpp  lss_utilities.cpp  lss_utilities.hpp  matrix.cpp  matrix.hpp  mlinearsystem.h  mlinearsystem.hpp  mmatrix.h  mmatrix.hpp  nonlinearsystem.cpp  nonlinearsystem.hpp  utilities.cpp  (+1 more)
lss/cf3/lss/detail/: index.hpp  linearsystem.hpp  matrix.cpp  matrix.hpp  utilities.cpp  utilities.hpp
lss/cf3/lss/reference/: GMRES.cpp  a.cpp  (+7 more)
lss/cmake/: README.md
lss/test/: .gitignore  CMakeLists.txt  atest-lss-matrices.py  atest-lss-simple.py  atest-lss.py  atest_lss_complex.py  atest_lss_matrices.py  atest_lss_simple.py
lss/test/matrices/: .gitignore  download.sh  ibm_simple_dense_complex_A.mtx  ibm_simple_dense_complex_b.mtx  intel_mkl_simple_sparse_matrix.csc  intel_mkl_simple_sparse_matrix.csr  samg_demo_matrix.csr  samg_demo_rhs.mtx  samg_demo_sol.mtx  sample_intel_sparse_matrix_base_0.csr  sample_intel_sparse_matrix_base_1.csr  simple_dense_matrix.mtx  simple_sparse_matrix_base_0.csr  simple_sparse_matrix_base_1.csr
lss_dlib/: CMakeLists.txt
lss_dlib/cf3/lss/: CMakeLists.txt  LibLSS_DLIB.cpp  LibLSS_DLIB.hpp  dlib.cpp  dlib.hpp
lss_pardiso/: CMakeLists.txt
lss_pardiso/cf3/lss/: CMakeLists.txt  LibLSS_PARDISO.cpp  LibLSS_PARDISO.hpp  LibLSS_pardiso.cpp  LibLSS_pardiso.hpp  pardiso.cpp  pardiso.hpp
(+36 files in other folders)
